# tensorlogic

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Docs/: Grammar.bnf  GrammarV2.bnf  GrammarV3.bnf  TensorBackendPhasedPlan.md  TensorBackendVMPlan.md
Examples/: 00_min.tl  02_matrix_multiply.tl  07_arithmetic.tl  08_datalog_facts.tl  13_transformer_attention.tl
Examples/Future/: 02_matrix_multiply_compact.tl  03_vector_product_compact.tl  04_function_calls_compact.tl
Examples/ParseTests/: 01_simple_equation.tl  03_vector_product.tl  04_function_calls.tl  05_single_perceptron.tl  06_mlp.tl  09_datalog_rules.tl  10_datalog_query.tl  11_file_io.tl  12_alternative_projections.tl  14_mixed_neurosymbolic.tl
Examples/Programs/: 02_matrix_multiply.tl  03_inner_product_in_perceptron.tl  03_orthogonality_check.tl  03_vector_magnitude.tl  03_vector_product.tl  03_weighted_sum.tl  04_advanced_activations.tl  04_comparing_activation_functions.tl  04_function_calls.tl  04_multi_layer_network_multiple_activations.tl  05_multi_input_classification.tl  05_perceptron_and_gate.tl  05_perceptron_or_gate.tl  05_perceptron_with_bias_term.tl  05_perceptron_with_negative_classification.tl  05_single_layer_perceptron.tl  06_mlp.tl  06_mlp_batch_multiple_inputs.tl  06_mlp_simple_2_layer.tl  07_arithmetic.tl  07_batch_normalization.tl  07_element_wise_operations.tl  07_min_max_normalization.tl  07_residual_connection.tl  07_standard_normalization.tl  08_boolean_tensors.tl  08_datalog_facts.tl  08_datalog_facts_extended.tl  08_datalog_facts_multiple_relationshipt.tl  08_multiple_domains.tl  08_temporal_facts.tl  09_datalog_rules.tl  09_datalog_rules_extended.tl  09_grandparent_rules.tl  09_path_finding_graph.tl  09_sibling_rules.tl  09_social_network.tl  10_complex_multi_step.tl  10_datalog_query.tl  10_datalog_query_extended.tl  (+53 more)
Examples/Programs/data/: test.csv  train.csv  weights.csv
Include/TL/: AST.hpp  Lexer.hpp  Parser.hpp  backend.hpp  core.hpp  vm.hpp
Include/TL/Runtime/: DatalogEngine.hpp  Executor.hpp  ExecutorRegistry.hpp  ExecutorUtils.hpp  LearningEngine.hpp  PreprocessorRegistry.hpp  StatementPreprocessor.hpp
Include/TL/Runtime/Executors/: EinsumExecutor.hpp  ExpressionExecutor.hpp  GuardedClauseExecutor.hpp  IdentityExecutor.hpp  IndexedProductExecutor.hpp  ListLiteralExecutor.hpp  NormalizationExecutor.hpp  PoolingExecutor.hpp  ReductionExecutor.hpp  ScalarAssignExecutor.hpp
Include/TL/Runtime/Preprocessors/: VirtualIndexPreprocessor.hpp
Source/: AST.cpp  Lexer.cpp  Parser.cpp  VM.cpp  backend_libtorch.cpp  main.cpp
Source/Runtime/: DatalogEngine.cpp  ExecutorUtils.cpp  LearningEngine.cpp
Source/Runtime/Executors/: EinsumExecutor.cpp  ExpressionExecutor.cpp  GuardedClauseExecutor.cpp  IdentityExecutor.cpp  IndexedProductExecutor.cpp  ListLiteralExecutor.cpp  NormalizationExecutor.cpp  PoolingExecutor.cpp  ReductionExecutor.cpp  ScalarAssignExecutor.cpp
Source/Runtime/Preprocessors/: VirtualIndexPreprocessor.cpp
Tests/Integration/: test_examples.cpp
Tests/Unit/: test_activations.cpp  test_datalog.cpp  test_datalog_arithmetic.cpp  test_executors.cpp  test_guarded_clauses.cpp  test_learning_directives.cpp  test_neurosymbolic.cpp  test_normalized_indices.cpp  test_parse_statements.cpp  test_pooling.cpp  test_slicing.cpp  test_tensor_comparisons.cpp  test_tensor_operations.cpp  test_virtual_indexing.cpp
cmake/: FetchCatch2.cmake  FetchLibTorch.cmake  FetchPEGTL.cmake
